--- a/_posts/2016-10-18-3-3-Equations.md
+++ b/_posts/2016-10-18-3-3-Equations.md
@@ -3,4 +3,5 @@ layout: post
 title: 3-3 Equations (purple)
 ---
 Sorry the video's name is wrong!
+Try These # 1-5
 <iframe width="560" height="315" src="https://www.youtube.com/embed/rY45mBJFcvg" frameborder="0" allowfullscreen></iframe>
