--- a/_posts/2017-08-17-1-3-GCF.md
+++ b/_posts/2017-08-17-1-3-GCF.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 1-3 Great Common Factor (purple)
+title: 1-3 Greatest Common Factor (purple)
 ---
 Try These # 1-5
-<iframe width="560" height="315" src="https://www.youtube.com/embed/x1HyTPSKRXo" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/x1HyTPSKRXo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
