--- a/_posts/2017-08-18-1-4-LCM.md
+++ b/_posts/2017-08-18-1-4-LCM.md
@@ -3,4 +3,4 @@ layout: post
 title: 1-4 Multiples LCM and LCD (purple)
 ---
 Try These EVENS
-<iframe width="560" height="315" src="https://www.youtube.com/embed/hvmGJ-S4qjE" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hvmGJ-S4qjE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
